--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     }
    
    
-   /* ---------------------------------------------------------- Nav Bar ----------------------------------------------------------------------
+   /* ---------------------------------------------------------- Nav Bar ----------------------------------------------------------------------*/
    
      
  ul {
