--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ font-family: Times New Roman, Helvetica, sans-serif;
 }
 
 ul {
-   lisy-style-type: none;
+   list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
