--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
       li a:hover { 
      background-color: #a31ca3
      
-       .active {
-    
+      .active {
+    background-color: #a76bcf
+     }
      
-     } 
