--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
        tex-decoration: none;
      }
      
-      li a:hover { 
+      li a:hover:not(.active) { 
      background-color: #a31ca3
      
       .active {
