--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul {
      }
      
       li a:hover:not(.active) { 
-     background-color: #a31ca3
+     background-color: #e9d7f5
      
       .active {
     background-color: #a76bcf
